--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "movie_server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^1.3.6",
-    "config": "^3.3.9",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongoose": "^7.0.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  }
+	"name": "movie_server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon ./index.js"
+	},
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"axios": "^1.3.6",
+		"config": "^3.3.9",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"mongoose": "^7.0.5"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.22"
+	}
 }
